refactor(App): Refactor all the components

--- a/src/css/index.css
+++ b/src/css/index.css
@@ -1,33 +1,33 @@
 fieldset {
-  border-radius: 3%;
-  border-width: 8px;
-  width: 360px;
-  max-width: 360px;
-  margin: 0 auto;
-  padding: 10px;
-  margin-top: 20px;
+    border-radius: 3%;
+    border-width: 8px;
+    width: 360px;
+    max-width: 360px;
+    margin: 0 auto;
+    padding: 10px;
+    margin-top: 20px;
 }
 
 h3 {
-  background: #d6eeff;
-  margin: 0 auto;
-  box-shadow: 0 0 10px rgba(0,0,0,0.5);
-  padding: 6px;
-  font-size: 240%;
-  text-align: right;
-  margin-bottom: 12px;
-  font-family: sans-serif;
+    background: #d6eeff;
+    margin: 0 auto;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
+    padding: 6px;
+    font-size: 240%;
+    text-align: right;
+    margin-bottom: 12px;
+    font-family: sans-serif;
 }
 
-#evalBtn{
-  float: right;
+#evalBtn {
+    float: right;
 }
 
 button {
-  width: 90px;
-  font-family: sans-serif;
-  font-size: 190%;
-  border-radius: 5px;
-  color: white;
-  background: #24272A;
+    width: 90px;
+    font-family: sans-serif;
+    font-size: 190%;
+    border-radius: 5px;
+    color: white;
+    background: #24272A;
 }
